syntax = "proto3";

package surveilsense;

option go_package = "./proto;proto";

// Message sent from CameraFeedActor to FrameProcessorActor
message FrameData {
  string camera_id = 1;
  int64 timestamp = 2;
  bytes image_data = 3; // Encoded image (e.g., JPEG)
}

// Detection details for a single human
message Detection {
  float confidence = 1;
  int32 x = 2;
  int32 y = 3;
  int32 width = 4;
  int32 height = 5;
}

// Message sent from FrameProcessorActor to NotificationActor and StorageActor
message DetectionEvent {
  string camera_id = 1;
  int64 timestamp = 2;
  repeated Detection detections = 3;
  bytes image_clip = 4; // Optional: cropped image or full frame
}
